After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 693222 - NTLM authentication doesn't reask password
NTLM authentication doesn't reask password
Status: RESOLVED FIXED
Product: libsoup
Classification: Core
Component: HTTP Transport
2.40.x
Other Linux
: Normal normal
: ---
Assigned To: libsoup-maint@gnome.bugs
libsoup-maint@gnome.bugs
: 646060 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2013-02-05 18:42 UTC by Milan Crha
Modified: 2013-07-13 14:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
test2.c (2.87 KB, text/plain)
2013-02-05 18:42 UTC, Milan Crha
Details

Description Milan Crha 2013-02-05 18:42:30 UTC
Created attachment 235249 [details]
test2.c

When playing with EWS I realized I'm not reasked for a password when the first is wrong, thus users cannot re-enter it (in evolution-ews they can reenter it, but the "authenticate" callback is not called on a session which failed before). My test program is close it, though I cannot mimic exactly that behaviour. Nonetheless, the attached test2.c shows that, with NTLM, the POST is done with only one "authenticate" emission. Only change the "exchange.example.com" with your EWS enabled exchange server host name.

Mine current output of the test is:
--------------------------------------------------------
queue_message_idle_cb: [0]: to be send

(process:27884): libsoup-WARNING **: NTLM single-sign-on by using /usr/bin/ntlm_auth failed
   authenticate_cb: retrying:0
   > queue_cb: [0]: result:401
queue_message_idle_cb: [1]: to be send

(process:27884): libsoup-WARNING **: NTLM single-sign-on by using /usr/bin/ntlm_auth failed
   authenticate_cb: retrying:0
   > queue_cb: [1]: result:401
queue_message_idle_cb: [2]: to be send

(process:27884): libsoup-WARNING **: NTLM single-sign-on by using /usr/bin/ntlm_auth failed
   authenticate_cb: retrying:0
   > queue_cb: [2]: result:401

--------------------------------------------------------

while I expect to see there:
   authenticate_cb: retrying:1
too. Testing with evolution-source-registry with configured evolution-ews account may help too, as it does call the authenticate_cb only once, on the first message, and the other messages are processed without that signal being emitted.
Comment 1 Dan Winship 2013-02-07 21:24:31 UTC
fixed in master

The NTLM code has been heavily reorganized in unstable, so it would
probably take a bit of work to backport the fix. (I haven't actually
looked. And of course, we're already one past the number of 2.40
releases there were supposed to be anyway...) So, unless you say
otherwise, the plan is to not backport this.
Comment 2 Milan Crha 2013-02-08 15:03:25 UTC
I'm fine, it was just that I faced it "accidentally".
Comment 3 Dan Winship 2013-07-13 14:25:16 UTC
*** Bug 646060 has been marked as a duplicate of this bug. ***