SoupAuthNTLM: fix to do a "retrying" authenticate

If the first attempt at NTLM auth fails, let the auth manager emit a
"retrying" authenticate as well, just like normal auths do.

https://bugzilla.gnome.org/show_bug.cgi?id=693222